--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = beegee-tokyo/DHT sensor library for ESPx@^1.19.0
+
+
+monitor_speed = 115200
